# E-Commerce-shop-f-d

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  requirements.txt  run.sh
backend/api/: admin.py  models.py  serializers.py  urls.py  views.py
backend/api/fixtures/: products.py
backend/api/management/commands/: generate_test_data.py  load_product_data.py
backend/api/migrations/: 0001_initial.py  0002_order_billing_address_order_payment_method_and_more.py  0002_remove_cart_items_cartitem_cart_order_orderitem.py  0003_alter_product_created_at_alter_product_description_and_more.py
backend/backend/api/: admin.py  factories.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/backend/api/fixtures/: products.json  products.py
backend/backend/api/management/commands/: generate_test_data.py  load_product_data.py
backend/backend/api/migrations/: 0001_initial.py
backend/backend/shop/: settings.py  urls.py
backend/shop/: models.py  settings.py  urls.py
backend/shop/media/products/: c392c3bd-d91c-4207-b69c-0ffd9d0b2155.jfif
frontend/: dockerignore  package-lock.json  package.json
frontend/src/: App.js  index.js
frontend/src/Pages/: Cart.jsx  Login.jsx  LoginSignup.jsx  Product.jsx  ShopCategory.jsx  UploadAllProductsScript.jsx
frontend/src/api/: api.js
nginx/: nginx.conf
public/: index.html
src/: App.js
src/Context/: ShopContext.jsx
src/context/: AuthContext.jsx
(+64 files in other folders)
